[package]
name = "jni-sys"
description = "Rust definitions corresponding to jni.h"
documentation = "https://docs.rs/jni-sys"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true
edition.workspace = true
rust-version.workspace = true
exclude = ["/tests"]

[dependencies]
jni-sys-macros.workspace = true

[dev-dependencies]
trybuild.workspace = true
