[package]
name = "jvmti-sys"
description = "Rust definitions corresponding to jvmti.h"
documentation = "https://docs.rs/jvmti-sys"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
jni-sys-macros.workspace = true
jni-sys.workspace = true
paste.workspace = true

[dev-dependencies]
trybuild.workspace = true

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(systest)'] }
